# inputdevice-dashboard-refresh

./: .gitignore  README.md  inputdevice.spec  main.py  pyproject.toml
src/: config.py
src/export/: exporter.py
src/ingestion/: fetcher.py
src/processing/: transformer.py
src/ui/: app.py
